        in 2.4.0 and also made the 'Enter a package expression' regression
        above able to show itself.
    - cache:
      - Constructor: don't error out if an extended states file is not
        present, print a warning instead. (Closes: #663382)
      - Reading APT pin preferences: fixed incorrect line numbers in error
        messages.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Mon, 05 Mar 2012 13:45:07 +0200

cupt (2.4.0) unstable; urgency=low

  * Switched the compiler from g++ 4.5 to g++ 4.6.
    - The compiler now can generate trivial move-constructors itself.
      Patch by Jonathan Nieder. (Closes: #647142)
  * console:
    - 'policy', 'policysrc':
      - New option '--show-dates'.
    - 'show':
      - Don't output 'Description-md5' field.
    - New subcommand 'iii'.
    - Actions preview:
      - Don't show size changes for 'not preferred' group.
      - Don't show reasons for 'not preferred' group.
    - Managing packages:
      - New option '--show-archives'.
      - New option '--show-codenames'.
      - New option '--show-components'.
      - New option '--show-vendors'.
    - 'search':
      - Switch off processing index translations in 'names-only' mode.
  * lib:
    - config:
      - The option 'cupt::resolver::score::position-penalty' now defaults to
        -2 (was -20).
      - Adjusted default values of options
        'cupt::resolver::score::{new,removal,quality-adjustment}' for changes
        in the score calculation (see below).
      - New (and default from now on) option value 'auto' for the option
        'cupt::worker::defer-triggers'.
      - New option 'cupt::console::actions-preview::show-versions'.
      - New option 'cupt::console::actions-preview::show-size-changes'.
      - New option 'cupt::console::actions-preview::show-archives'.
      - New option 'cupt::console::actions-preview::show-codenames'.
      - New option 'cupt::console::actions-preview::show-components'.